test/sema/methods/member_function_lookup_on_non_struct_symbol.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {}

fn foo(p: S) {
  let v = S{};

  // CHECK: [[# @LINE + 1 ]]:3: error: cannot access member of 'v'
  v::foo();

  // CHECK: [[# @LINE + 1 ]]:3: error: cannot access member of 'p'
  p::foo();
}

fn main() {}
